Attempt to fix bad menu layout on mobile

--- a/assets/scss/components/_menu-content.scss
+++ b/assets/scss/components/_menu-content.scss
@@ -5,6 +5,7 @@
 .content-menu {
   flex: 0 0 $toc-width;
   font-size: $font-size-12;
+  height: 100%;
 
   .content-menu-content {
       width: $menu-width;
