--- a/assets/scss/components/_menu-site.scss
+++ b/assets/scss/components/_menu-site.scss
@@ -1,6 +1,7 @@
 .site-menu {
   flex: 0 0 $menu-width;
   font-size: $font-size-14;
+  height: 100%;
 
   a:hover {
     opacity: 0.5;
